--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Epilogue:wght@500&display=swap"
+      rel="stylesheet"
+    />
     <title>Document</title>
   </head>
   <body>
@@ -17,23 +23,23 @@
           <div class="sale-block-img">
             <ul class="list-img">
               <li class="img-item">
-                <img src="./images/1image 68.jpg" alt="" />
+                <img class="watch" src="./images/1image 68.jpg" alt="" />
               </li>
               <li class="img-item">
-                <img src="./images/2image 64.jpg" alt="" />
+                <img class="watch" src="./images/2image 64.jpg" alt="" />
               </li>
               <li class="img-item">
-                <img src="./images/3image 65.jpg" alt="" />
+                <img class="watch" src="./images/3image 65.jpg" alt="" />
               </li>
               <li class="img-item">
-                <img src="./images/4image 66.jpg" alt="" />
+                <img class="watch" src="./images/4image 66.jpg" alt="" />
               </li>
             </ul>
-            <img src="./images/5img.jpg" alt="" />
+            <img class="watch5" src="./images/5img.jpg" alt="" />
           </div>
           <div class="sale-container-text">
             <div class="sale-product-block">
-              <h3 class="product-title">Greenlane Watch By Police For MenHT</h3>
+              <h3 class="product-title">Greenlane Watch By Police <br> For MenHT</h3>
               <p class="product-text">Product tag: PEWJK2227003</p>
               <div class="sale-container-cash">
                 <p class="cash-text">€700</p>
@@ -54,9 +60,9 @@
             <div class="details-sale">
               <h3 class="details-title">DETAILS & FEATUREStion</h3>
               <p class="details-text">
-                Gender: man Size: 46x54.5mm Case Colour: Steel Band Material:
-                Metal Case Material: Metal Features: Multifunction Water
-                Resistant: 5 (ATM) Band Colour: Steel
+                Gender: man <br> Size: 46x54.5mm <br> Case Colour: Steel <br> Band Material:
+                Metal <br> Case Material: Metal <br> Features: Multifunction <br> Water
+                Resistant: 5 (ATM) <br> Band Colour: Steel
               </p>
             </div>
           </div>
